--- a/_sass/minimal-mistakes/_footer.scss
+++ b/_sass/minimal-mistakes/_footer.scss
@@ -14,7 +14,7 @@
   bottom: 0;
   height: auto;
   /* sticky footer fix end */
-  margin-top: 3em;
+  margin-top: -35em;
   color: $muted-text-color;
   -webkit-animation: $intro-transition;
   animation: $intro-transition;
@@ -26,7 +26,7 @@
     @include clearfix;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 2em;
+    margin-top: auto;
     max-width: 100%;
     padding: 0 1em 2em;
 
